Add 3D Control page with Terminator blueprint style, add navigation links

--- a/gallery.html
+++ b/gallery.html
@@ -25,6 +25,7 @@
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="gallery.html" class="active">Gallery</a>
+                <a href="!22/index.html">3D Control</a>
             </div>
         </nav>
 
