--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         .tagline-sub {
             font-size: clamp(1rem, 2.5vw, 1.8rem);
             letter-spacing: 8px;
-            color: #00ffff;
-            text-shadow: 0 0 15px rgba(0, 255, 255, 0.5);
+            color: #ffff00;
+            text-shadow: 0 0 15px rgba(255, 255, 0, 0.5);
             margin-top: 15px;
         }
         
