--- a/!22/index.html
+++ b/!22/index.html
@@ -92,27 +92,33 @@
 
       /* ========== UI Panel - Blueprint Style ========== */
       .blueprint-panel {
-        background: rgba(0, 0, 0, 0.4);
-        backdrop-filter: blur(15px);
-        border: 2px solid rgba(255, 255, 255, 0.5);
-        box-shadow: 0 0 30px rgba(255, 255, 255, 0.2);
+        background: rgba(15, 23, 42, 0.8);
+        border: 1px solid rgba(255, 255, 0, 0.3);
+        backdrop-filter: blur(12px);
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5),
+          0 0 0 1px rgba(255, 255, 255, 0.1);
         position: relative;
       }
 
       .blueprint-panel::before {
         content: "";
         position: absolute;
-        top: 0;
-        left: -100%;
-        width: 200%;
-        height: 100%;
-        background: linear-gradient(
-          90deg,
-          transparent 0%,
-          rgba(255, 255, 255, 0.1) 50%,
-          transparent 100%
-        );
-        animation: shimmer 3s infinite;
+        top: -1px;
+        left: -1px;
+        width: 10px;
+        height: 10px;
+        border-top: 2px solid #ffff00;
+        border-left: 2px solid #ffff00;
+      }
+      .blueprint-panel::after {
+        content: "";
+        position: absolute;
+        bottom: -1px;
+        right: -1px;
+        width: 10px;
+        height: 10px;
+        border-bottom: 2px solid #ffff00;
+        border-right: 2px solid #ffff00;
       }
 
       @keyframes shimmer {
@@ -177,13 +183,15 @@
         border: 1px solid #ffff00;
         padding: 0.5rem 1rem;
         border-radius: 20px;
-        font-family: "Orbitron", monospace;
-        font-size: 0.75rem;
+        font-family: 'Orbitron', monospace;
+        font-weight: bold;
         letter-spacing: 2px;
-        transition: all 0.3s;
-        display: flex;
-        align-items: center;
-        gap: 0.5rem;
+        transition: all 0.3s ease;
+        text-transform: uppercase;
+        margin-top: 10px;
+        display: inline-block;
+        text-align: center;
+        text-decoration: none;
       }
 
       .btn-blueprint:hover {
@@ -237,7 +245,7 @@
           <a href="../index.html">HOME</a>
           <a href="../gallery.html">GALLERY</a>
         </div>
-        <label for="modelFile" class="btn-blueprint">
+        <label for="modelFile" class="btn-blueprint" style="color: #ffff00; border-color: #ffff00;">
           <svg
             class="w-4 h-4"
             style="width: 16px; height: 16px"
