Fix blue start screen overlay in 3D page (npx netlify db init)

--- a/!22/index.html
+++ b/!22/index.html
@@ -1369,11 +1369,11 @@
       // Start Overlay Logic
       const startOverlay = document.createElement("div");
       startOverlay.style.cssText =
-        'position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(15,117,188,0.95);z-index:300;display:flex;flex-direction:column;align-items:center;justify-content:center;font-family:"Orbitron",monospace;color:#fff;';
+        'position:fixed;top:0;left:0;width:100vw;height:100vh;background:rgba(217,235,55,0.95);z-index:300;display:flex;flex-direction:column;align-items:center;justify-content:center;font-family:"Orbitron",monospace;color:#fff;';
       startOverlay.innerHTML = `
       <h1 style="font-size:2.5rem;letter-spacing:5px;margin-bottom:20px;text-align:center;">SELECT MODE</h1>
       <div style="display:flex;gap:20px;flex-wrap:wrap;justify-content:center;">
-        <button id="btn-gesture" style="padding:15px 40px;font-family:'Orbitron',monospace;font-size:1.1rem;background:#00ffff;color:#0f75bc;border:none;border-radius:30px;cursor:pointer;letter-spacing:2px;transition:transform 0.2s, box-shadow 0.2s;min-width:200px;">
+        <button id="btn-gesture" style="padding:15px 40px;font-family:'Orbitron',monospace;font-size:1.1rem;background:#ffff00;color:#333;border:none;border-radius:30px;cursor:pointer;letter-spacing:2px;transition:transform 0.2s, box-shadow 0.2s;min-width:200px;">
           GESTURE 3D
         </button>
         <button id="btn-ar" style="padding:15px 40px;font-family:'Orbitron',monospace;font-size:1.1rem;background:transparent;color:#fff;border:2px solid #fff;border-radius:30px;cursor:pointer;letter-spacing:2px;transition:background 0.2s;min-width:200px;">
