--- a/!22/index.html
+++ b/!22/index.html
@@ -1373,7 +1373,7 @@
       startOverlay.innerHTML = `
       <h1 style="font-size:2.5rem;letter-spacing:5px;margin-bottom:20px;text-align:center;">SELECT MODE</h1>
       <div style="display:flex;gap:20px;flex-wrap:wrap;justify-content:center;">
-        <button id="btn-gesture" style="padding:15px 40px;font-family:'Orbitron',monospace;font-size:1.1rem;background:#ffff00;color:#333;border:none;border-radius:30px;cursor:pointer;letter-spacing:2px;transition:transform 0.2s, box-shadow 0.2s;min-width:200px;">
+        <button id="btn-gesture" style="padding:15px 40px;font-family:'Orbitron',monospace;font-size:1.1rem;background:#00ffff;color:#0f75bc;border:none;border-radius:30px;cursor:pointer;letter-spacing:2px;transition:transform 0.2s, box-shadow 0.2s;min-width:200px;">
           GESTURE 3D
         </button>
         <button id="btn-ar" style="padding:15px 40px;font-family:'Orbitron',monospace;font-size:1.1rem;background:transparent;color:#fff;border:2px solid #fff;border-radius:30px;cursor:pointer;letter-spacing:2px;transition:background 0.2s;min-width:200px;">
