Rename files and directories (git commit -m>3d-control, index-5->ar, index-6->lenticular-demo) and update all links

--- a/ar.html
+++ b/ar.html
@@ -82,7 +82,7 @@
   <div class="fixed top-6 left-1/2 -translate-x-1/2 z-50 w-full max-w-sm px-4">
     <div class="liquid-glass rounded-2xl px-5 py-3 flex items-center justify-between">
       <div class="flex items-center gap-3">
-        <a href="!22/index.html" class="bg-white/10 p-2 rounded-full hover:bg-white/20 transition">
+        <a href="3d-control/index.html" class="bg-white/10 p-2 rounded-full hover:bg-white/20 transition">
           <svg class="w-4 h-4 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/></svg>
         </a>
         <span class="text-sm font-medium text-white/90 tracking-wide">AR View</span>
@@ -109,7 +109,7 @@
   -->
   <model-viewer
     id="viewer"
-    src="!22/model.glb"
+    src="3d-control/model.glb"
     scale="0.01 0.01 0.01"
     poster="https://placehold.co/1080x1920/000000/FFFFFF/png?text=Loading+AR+Model..."
     alt="3D Model"
