--- a/3d-control/index.html
+++ b/3d-control/index.html
@@ -289,7 +289,7 @@
           style="display: none"
         />
         <a
-          href="../index-5.html"
+          href="../ar.html"
           class="bg-white/10 hover:bg-white/20 transition-all duration-300 rounded-xl px-4 py-2 text-sm text-white/90 border border-white/20 hover:border-white/40 flex items-center gap-2 no-underline"
         >
           <svg
@@ -1414,7 +1414,7 @@
 
       // AR Mode: Navigate to AR page
       document.getElementById("btn-ar").addEventListener("click", () => {
-        window.location.href = "../index-5.html";
+        window.location.href = "../ar.html";
       });
 
       // Event listeners
