Add 3D Experience mode selection page with Gesture 3D and AR options

--- a/gallery.html
+++ b/gallery.html
@@ -26,7 +26,7 @@
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="gallery.html" class="active">Gallery</a>
-                <a href="3d-control/index.html">3D Control</a>
+                <a href="3d-experience.html">3D Experience</a>
             </div>
         </nav>
 
