--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="nav-links">
                 <a href="index.html" class="active">Home</a>
                 <a href="gallery.html">Gallery</a>
-                <a href="3d-control/index.html">3D Control</a>
+                <a href="3d-experience.html">3D Experience</a>
             </div>
         </nav>
 
