--- a/3d-control/index.html
+++ b/3d-control/index.html
@@ -386,13 +386,13 @@
         color: #fff;
       "
     >
-      <h1 style="font-size: 2rem; letter-spacing: 5px; margin-bottom: 20px">
+      <h1 style="font-size: 2rem; letter-spacing: 5px; margin-bottom: 20px; color: rgba(55, 148, 235, 1)">
         CALIBRATION
       </h1>
-      <p style="font-size: 1rem; letter-spacing: 2px; margin-bottom: 30px">
+      <p style="font-size: 1rem; letter-spacing: 2px; margin-bottom: 30px; color: rgba(55, 148, 235, 1)">
         両手の人差し指を画面に表示してください
       </p>
-      <p id="calibration-status" style="font-size: 0.9rem; color: #ffff00">
+      <p id="calibration-status" style="font-size: 0.9rem; color: rgba(55, 148, 235, 1)">
         手を検出中...
       </p>
       <button
@@ -403,7 +403,7 @@
           padding: 15px 40px;
           font-family: 'Orbitron', monospace;
           font-size: 1rem;
-          background: #ffff00;
+          background: rgba(55, 148, 235, 1);
           color: #d9eb37;
           border: none;
           border-radius: 30px;
