--- a/3d-experience.html
+++ b/3d-experience.html
@@ -50,6 +50,7 @@
       justify-content: center;
       height: 100vh;
       padding: 20px;
+      color: rgba(55, 148, 235, 1);
     }
 
     h1 {
@@ -65,6 +66,7 @@
       letter-spacing: 3px;
       margin-bottom: 50px;
       opacity: 0.8;
+      color: rgba(55, 148, 235, 1);
     }
 
     .mode-buttons {
@@ -81,13 +83,16 @@
       justify-content: center;
       width: 200px;
       height: 200px;
-      background: rgba(255, 255, 255, 0.1);
-      border: 2px solid #ffff00;
+      background: none;
+      background-image: none;
+      background-color: rgba(255, 255, 0, 1);
+      border: 2px solid rgba(55, 148, 235, 1);
       border-radius: 20px;
       text-decoration: none;
-      color: #fff;
+      color: rgba(55, 148, 235, 1);
       transition: all 0.3s ease;
       cursor: pointer;
+      border-width: 2px;
     }
 
     .mode-btn:hover {
@@ -122,7 +127,7 @@
       position: fixed;
       top: 30px;
       left: 30px;
-      color: #fff;
+      color: rgba(55, 148, 235, 1);
       text-decoration: none;
       font-size: 0.9rem;
       letter-spacing: 2px;
