--- a/gallery.html
+++ b/gallery.html
@@ -27,6 +27,7 @@
                 <a href="index.html">Home</a>
                 <a href="gallery.html" class="active">Gallery</a>
                 <a href="3d-experience.html">3D Experience</a>
+                <a href="index7.html">Demo</a>
             </div>
         </nav>
 
