--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                 <a href="index.html" class="active">Home</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="3d-experience.html">3D Experience</a>
+                <a href="index7.html">Demo</a>
             </div>
         </nav>
 
