--- a/index7.html
+++ b/index7.html
@@ -233,31 +233,13 @@
 
         </div>
 
+        <!-- Hidden inputs to maintain logic defaults -->
+        <input type="hidden" id="rngFeather" value="0.55">
+        <input type="hidden" id="rngEV" value="0">
+        <input type="hidden" id="rngNoise" value="0.20">
+        
         <div class="section">
-             <h3>Advanced Adjustments</h3>
-             <div class="dial-grid">
-                <!-- Feather -->
-                <div class="form-group">
-                    <label>Feather (Edge)</label>
-                    <input type="hidden" id="rngFeather" value="0.55">
-                    <div id="feather-dial-container"></div>
-                </div>
-
-                <!-- EV -->
-                <div class="form-group">
-                    <label>EV (Bias)</label>
-                    <input type="hidden" id="rngEV" value="0">
-                    <div id="ev-dial-container"></div>
-                </div>
-
-                <!-- Noise -->
-                <div class="form-group">
-                    <label>Noise Level</label>
-                    <input type="hidden" id="rngNoise" value="0.20">
-                    <div id="noise-dial-container"></div>
-                </div>
-             </div>
-
+             <h3>Hardware Settings</h3>
              <div class="details-grid" style="margin-top:20px; border-top:1px solid #ddd; padding-top:15px;">
                 <label>Resolution: 
                     <select id="selRes">
@@ -273,6 +255,7 @@
                     </select>
                 </label>
              </div>
+        </div>
 
         <div
           style="
@@ -663,24 +646,6 @@
           initialValue: 0.45,
           labelUnit: "m?",
           onUpdate: (v) => (document.getElementById("rngFocus").value = v),
-        });
-
-        // Feather Dial: 0.05 to 1.0
-        new DialControl("feather-dial-container", {
-             min: 0.05, max: 1.0, step: 0.01, initialValue: 0.55, labelUnit: "",
-             onUpdate: (v) => document.getElementById("rngFeather").value = v
-        });
-
-        // EV Dial: -2.0 to 2.0
-        new DialControl("ev-dial-container", {
-             min: -2.0, max: 2.0, step: 0.1, initialValue: 0, labelUnit: "EV",
-             onUpdate: (v) => document.getElementById("rngEV").value = v
-        });
-
-        // Noise Dial: 0 to 1.0
-        new DialControl("noise-dial-container", {
-             min: 0, max: 1.0, step: 0.01, initialValue: 0.20, labelUnit: "",
-             onUpdate: (v) => document.getElementById("rngNoise").value = v
         });
 
         // Toggles
